--- a/PianoNote/Asset/Base.lproj/Main.storyboard
+++ b/PianoNote/Asset/Base.lproj/Main.storyboard
@@ -84,6 +84,13 @@
                                                                                 <outlet property="titleLabel" destination="e1f-ZP-X6s" id="WPa-cF-PGb"/>
                                                                             </connections>
                                                                         </view>
+                                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PoS-3w-BrL">
+                                                                            <rect key="frame" x="2" y="10" width="46" height="30"/>
+                                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                            <connections>
+                                                                                <action selector="action:" destination="iyR-P0-aHP" eventType="touchUpInside" id="c14-hm-Oxa"/>
+                                                                            </connections>
+                                                                        </button>
                                                                     </subviews>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </view>
@@ -99,6 +106,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="backRoundedView" destination="Yb1-Qo-YRc" id="tBv-U0-7Ey"/>
+                                            <outlet property="button" destination="PoS-3w-BrL" id="A0s-BC-IMj"/>
                                             <outlet property="contentsView" destination="K5R-Un-98T" id="veE-YI-tTY"/>
                                             <outlet property="deleteButton" destination="t81-b6-K3f" id="foV-hb-7xZ"/>
                                             <outlet property="noteView" destination="WdL-ow-xLO" id="Tvl-LY-gcU"/>
@@ -116,6 +124,29 @@
                         <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="R4I-dN-G5n"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="dME-dZ-50J">
+                            <connections>
+                                <action selector="toolBarWithLeft:" destination="hXS-0I-ej6" id="GH9-Na-gD0"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="rEW-Mv-vR7"/>
+                        <barButtonItem title="Item" id="RdL-Tn-4rW">
+                            <connections>
+                                <action selector="toolBarWithCenter:" destination="hXS-0I-ej6" id="hS9-IS-q4R"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="L00-TQ-p7y"/>
+                        <barButtonItem systemItem="trash" id="zPf-9l-cEE">
+                            <connections>
+                                <action selector="toolBarWithRight:" destination="hXS-0I-ej6" id="SkF-7D-YHM"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="3r4-f2-8Rg">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="GVR-q9-nv7"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="listView" destination="b77-SB-8xH" id="GkC-wp-dZp"/>
                     </connections>
@@ -401,6 +432,13 @@
                                                                                                     <outlet property="titleLabel" destination="wbM-dh-8aO" id="JrM-A1-IqK"/>
                                                                                                 </connections>
                                                                                             </view>
+                                                                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gp3-nR-4wf">
+                                                                                                <rect key="frame" x="2" y="10" width="46" height="30"/>
+                                                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                                                <connections>
+                                                                                                    <action selector="action:" destination="O6i-jg-i1s" eventType="touchUpInside" id="uF6-pQ-nHd"/>
+                                                                                                </connections>
+                                                                                            </button>
                                                                                         </subviews>
                                                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     </view>
@@ -416,6 +454,7 @@
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <connections>
                                                                 <outlet property="backRoundedView" destination="HqR-xd-HN6" id="KOg-Ao-dI9"/>
+                                                                <outlet property="button" destination="Gp3-nR-4wf" id="glZ-50-EUW"/>
                                                                 <outlet property="contentsView" destination="YV0-lg-v5L" id="WTS-lq-bJA"/>
                                                                 <outlet property="deleteButton" destination="J1U-y8-lvD" id="ZBY-sH-hQV"/>
                                                                 <outlet property="noteView" destination="5jq-7v-F1n" id="4S6-ns-4pu"/>
